Fixed broken alignment of text in range

--- a/src/timeline/component/css/item.css
+++ b/src/timeline/component/css/item.css
@@ -90,10 +90,6 @@
   overflow: hidden;
 }
 
-.vis.timeline .item.range .content {
-  width: 100%;
-}
-
 .vis.timeline .item .delete {
   background: url('img/timeline/delete.png') no-repeat top center;
   position: absolute;
